--- a/package.json
+++ b/package.json
@@ -139,7 +139,8 @@
     "url-loader": "^4.1.1",
     "yarn": "^1.22.19",
     "yup": "1.0.1",
-    "zod": "^3.0.0"
+    "zod": "^3.0.0",
+    "@testing-library/react": "15.0.6"
   },
   "resolutions": {
     "@types/react": "^17.0.2",
